crates/toml/tests/snapshots/invalid/string/bad-uni-esc-05.stderr
TOML parse error at line 1, column 23
  |
1 | bad-uni-esc-5 = "val\Ugggggggg"
  |                       ^
too few unicode value digits, expected unicode hexadecimal value
